<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CCEE视频工具</string>

    <string name="solution_apsarav">ApsaraV</string>
    <string name="solution_push">直播推流</string>
    <string name="solution_live_room">互动直播</string>
    <string name="solution_player">视频播放</string>
    <string name="solution_svideo">短视频</string>
    <string name="solution_upload">视频上传</string>
    <string name="solution_recorder">视频拍摄</string>
    <string name="solution_camera">魔法相机</string>
    <string name="solution_crop">视频裁剪</string>
    <string name="solution_edit">视频编辑</string>

    <string name="action_settings">Settings</string>
    <string name="record">拍摄</string>
    <string name="magic_camera">魔法相机</string>
    <string name="edit">导入编辑</string>
    <string name="crop">导入裁剪</string>
    <string name="live">直播</string>
    <string name="ui">UI组件</string>
    <string name="need_permission">请给予相应的权限</string>
    <string name="help">其他</string>

    <string name="solution_wait_remind">产品功能正在开发中...</string>
    <string name="solution_unable_merge_remind">上传和短视频存在冲突,协调解决中..</string>
    <string name="resetstr">切换成功，正在重新加载数据...</string>


    //登陆页
    <string name="login">登录</string>
    <string name="login_des">登录后才能拥有个人视频空间</string>
    <string name="login_name_hint">邮箱/手机号</string>
    <string name="login_psw_hint">登录密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="read_agree">阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="user_agreement2">用户协议</string>
    <string name="login_now">立即登录</string>
    <string name="iknow">我知道了</string>
    <string name="forget_psw_des">请联系雨果客服进行密码重置\n电话1730505920112</string>
    <string name="video_lib">视频库</string>
    <string name="mine">我的</string>
    <string name="video_all">全部</string>
    <string name="video_draft">草稿</string>
    <string name="video_check_pending">待审核</string>
    <string name="video_published">已发布</string>
    <string name="video_failed">未通过</string>
    <string name="contact_service">联系客服</string>
    <string name="sys_setting">系统设置</string>
    <string name="exit_login">退出登录</string>
    <string name="contact_service_des">如有疑问，请咨询电话客服\n电话1730505920112</string>
    <string name="contact_now">拨打电话</string>
    <string name="current_version">当前版本</string>
    <string name="wipe_cache">清除缓存</string>
    <string name="contact_later">稍后联系</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="tip">提示</string>
    <string name="login_out_des">确认退出登录？</string>
    <string name="audit_notice">审核通知</string>
    <string name="view_video">查看视频 ></string>
    <string name="share">分享</string>
    <string name="undercarriage">下架</string>
    <string name="video_classify">视频分类</string>
    <string name="selected_articles">选品文章</string>
    <string name="video_detail">视频详情</string>
    <string name="video_edit">视频编辑</string>
    <string name="classify">分类 *</string>
    <string name="title">标题 *</string>
    <string name="describe">描述 *</string>
    <string name="article">文章</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="choose_articles">选择文章</string>
    <string name="edit1">编辑</string>
    <string name="upload_video">上传视频</string>
    <string name="search">搜索</string>
    <string name="please_input_psw">请输入密码</string>
    <string name="please_input_user_name">请输入用户名</string>

    <string name="none_article">无关联文章</string>

</resources>
