<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c7color"
        tools:context=".view.activity.LoginActivity">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp30"
            android:paddingRight="@dimen/dp30"
            android:paddingTop="@dimen/dp92">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/c2color"
                        android:textSize="@dimen/s7textsize"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/dp0_5"
                        android:layout_height="@dimen/dp20"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp15"
                        android:background="@color/c5color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_des"
                        android:textColor="@color/c3color"
                        android:textSize="@dimen/s1textsize"
                        android:textStyle="bold" />


                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp65"
                    android:layout_marginTop="50dp">

                    <com.sunsh.baselibrary.widgets.SearchEditText
                        android:id="@+id/text_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@color/c7color"
                        android:hint="@string/login_name_hint"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/c2color"
                        android:textColorHint="@color/c4color"
                        android:textSize="@dimen/s2textsize" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0_5"
                    android:background="@color/c5color" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp65"
                    android:background="@color/c7color"
                    android:orientation="horizontal">


                    <com.sunsh.baselibrary.widgets.SearchEditText
                        android:id="@+id/text_input_password"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/c7color"
                        android:hint="@string/login_psw_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/c2color"
                        android:textColorHint="@color/c4color"
                        android:textSize="@dimen/s2textsize" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp15"
                        android:onClick="showPsw"
                        android:src="@drawable/selector_psw_hide" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0_5"
                    android:background="@color/c5color" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@color/c7color"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="@dimen/dp0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/c7color">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/read_agree" />

                        <TextView
                            android:id="@+id/tv_agreement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp5"
                            android:background="?attr/selectableItemBackground"
                            android:onClick="userAgreement"
                            android:singleLine="true"
                            android:text="@string/user_agreement"
                            android:textColor="@color/c1color" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp15"
                        android:background="?attr/selectableItemBackground"
                        android:onClick="forgetPsw"
                        android:text="@string/forget_psw"
                        android:textColor="@color/c3color"
                        android:textSize="@dimen/s5textsize" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp40"
                    android:background="@drawable/shape_solidc1_corner25"
                    android:elevation="@dimen/dp20"
                    android:onClick="login"
                    android:text="@string/login_now"
                    android:textColor="@color/c7color"
                    android:textSize="@dimen/s1textsize" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout>

</layout>