<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c7color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c7color"
        android:elevation="@dimen/dp3"
        android:orientation="vertical">

        <com.sunsh.baselibrary.widgets.StatusBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/c2color"
            android:textSize="@dimen/s1textsize" />
    </LinearLayout>

    <com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c6color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/c7color"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp78"
                android:layout_height="@dimen/dp78"
                android:layout_marginTop="@dimen/dp40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp17"
                android:text="name"
                android:textColor="@color/c2color"
                android:textSize="@dimen/s1textsize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp40"
                android:text="platform"
                android:textColor="@color/c4color"
                android:textSize="@dimen/s4textsize" />


            <View
                android:layout_width="match_parent"
                android:background="@color/c6color"
                android:layout_height="@dimen/dp10"/>
            <TextView
                android:id="@+id/tv_contact_service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp70"
                android:textSize="@dimen/s1textsize"
                android:drawableLeft="@mipmap/icon_service"
                android:drawablePadding="@dimen/dp10"
                android:drawableRight="@mipmap/icon_more"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/c2color"
                android:text="@string/contact_service"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0_5"
                android:background="@color/c5color" />

            <TextView
                android:id="@+id/tv_sys_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp70"
                android:drawableLeft="@mipmap/icon_set"
                android:drawablePadding="@dimen/dp10"
                android:drawableRight="@mipmap/icon_more"
                android:background="?attr/selectableItemBackground"
                android:textSize="@dimen/s1textsize"
                android:textColor="@color/c2color"
                android:text="@string/sys_setting"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15" />



            <View
                android:layout_width="match_parent"
                android:background="@color/c6color"
                android:layout_height="@dimen/dp10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:text="@string/exit_login"
                android:id="@+id/tv_exit_login"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:textColor="@color/c2color"
                android:textSize="@dimen/s1textsize" />

            <View
                android:layout_width="match_parent"
                android:background="@color/c6color"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout>

</LinearLayout>