<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="data"
            type="com.ccee.videotool.model.entities.response.VideoDetailBean" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c7color"
        android:orientation="vertical">


        <com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/c7color">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp211"
                        android:background="@color/black">

                        <ImageView
                            android:id="@+id/iv_cover"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="videoPlay"
                            android:scaleType="fitCenter"
                            app:img="@{data.coverImgUrl}" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="?attr/selectableItemBackground"
                            android:onClick="videoPlay"
                            android:padding="@dimen/dp10"
                            android:src="@mipmap/btn_play" />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/dp15"
                        android:animateLayoutChanges="true"
                        android:paddingTop="@dimen/dp20"
                        android:paddingRight="@dimen/dp15">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{data.title}"
                            android:hint="未设置标题"
                            android:textColor="@color/c2color"
                            android:textSize="@dimen/s10textsize"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@{data.addTime}"
                            android:textColor="@color/c4color"
                            android:textSize="@dimen/s6textsize" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp20"
                            android:hint="未设置详情"
                            android:lineSpacingExtra="@dimen/dp10"
                            android:text="@{data.description}"
                            android:textColor="@color/c3color"
                            android:textSize="@dimen/s2textsize" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp20"
                            android:background="@color/c6color" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp50"
                            android:animateLayoutChanges="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/video_classify"
                                android:textColor="@color/c4color"
                                android:textSize="@dimen/s3textsize" />

                            <TextView
                                android:id="@+id/tv_actegory"
                                android:layout_width="wrap_content"
                                android:hint="未设置分类"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp15"
                                android:text="@{data.categoryTitle}"
                                android:textColor="@color/c2color"
                                android:textSize="@dimen/s3textsize" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp0_5"
                            android:background="@color/c5color" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp50"
                            android:animateLayoutChanges="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/selected_articles"
                                android:textColor="@color/c4color"
                                android:textSize="@dimen/s3textsize" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:hint="未设置相关选品文章"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp15"
                                android:text="@{data.productInfo!=null?data.productInfo.title:@string/none_article}"
                                android:textColor="@color/c2color"
                                android:textSize="@dimen/s3textsize" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp0_5"
                            android:background="@color/c5color" />


                    </LinearLayout>
                </LinearLayout>


            </android.support.v4.widget.NestedScrollView>

        </com.sunsh.baselibrary.widgets.overscroll.OverScrollLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/c5color"
            android:layout_height="@dimen/dp0_5"/>
        <LinearLayout
            android:id="@+id/linear_bottom"
            android:layout_width="match_parent"
            android:background="@color/c7color"
            android:layout_height="@dimen/dp50"
           >

            <TextView
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp50"
                android:layout_weight="1"
                android:onClick="delete"
                android:text="@string/delete"
                android:background="@color/c6color"
                android:gravity="center"
                android:textColor="@color/c3color"
                android:textSize="@dimen/s1textsize" />
            <View
                android:layout_width="@dimen/dp0_5"
                android:background="@color/c5color"
                android:visibility="@{data.videoId==null?View.GONE:View.VISIBLE}"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_center"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp50"
                android:onClick="share"
                android:layout_weight="1"
                android:visibility="@{data.videoId==null?View.GONE:View.VISIBLE}"
                android:text="@string/share"
                android:background="@{data.auditStatus==3?@color/c6color:@color/c1color}"
                android:gravity="center"
                android:textColor="@{data.auditStatus==3?@color/c3color:@color/c7color}"
                android:textSize="@dimen/s1textsize" />

            <TextView
                android:onClick="reason"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp50"
                android:visibility="@{data.auditStatus==3?View.VISIBLE:View.GONE}"
                android:layout_weight="1"
                android:text="查看原因"
                android:background="@color/c1color"
                android:gravity="center"
                android:textColor="@color/c7color"
                android:textSize="@dimen/s1textsize" />
        </LinearLayout>


    </LinearLayout>
</layout>